# cpsc368-group-project

./: .gitignore  pyproject.toml  steam_games.sql
assignment-specs/: bookbiz.sql
data/clean/: games.csv  merged.csv  player_stats.csv  reviews.csv
docs/: example_documents.md  oracle_baselines.md  q1_comparison.md  q2_comparison.md  q3_comparison.md  q4_comparison.md
docs/.ipynb_checkpoints/: example_documents-checkpoint.md  oracle_baselines-checkpoint.md
figures/phase_4/: q1_price_vs_engagement.html
scripts/: 02_fetch_steamspy.py  check_results.py  generate_er_diagram.py  load_oracle.py
scripts/phase_3/: 01_join_mendeley_metacritic.py  03_clean_and_split.py  04_generate_sql.py  05_oracle_queries.py  06_fetch_steamcharts.py  verify_sql.py
scripts/phase_4/: Q2_price_vs_perceived_quality.py  load_mongodb.py  mongo_analysis_rq1.py  mongo_config.py  q1_price_vs_engagement.py  q2_price_vs_quality.py  q3_marketplace_trends.py  q4_score_engagement.py
scripts/phase_4/.ipynb_checkpoints/: mongo_analysis_rq1-checkpoint.py
