[project]
name = "cpsc368-steam-analysis"
version = "0.1.0"
description = "Analysis of Steam game pricing vs. engagement and quality (CPSC 368)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "matplotlib>=3.10.8",
    "oracledb>=3.4.2",
    "pandas>=3.0.1",
    "pymongo>=4.16.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "vl-convert-python>=1.9.0.post1",
]
